--- a/README
+++ b/README
@@ -40,6 +40,8 @@ You can also look for information at:
     Search CPAN
         http://search.cpan.org/dist/App-Taskflow/
 
+    Repository
+        https://github.com/fouladi/App-Taskflow
 
 LICENSE AND COPYRIGHT
 
